# rotors_simulator

griffin_control/: CMakeLists.txt  package.xml
griffin_control/include/griffin_control/: common.h  position_controller.h
griffin_control/include/rotors_control/: common.h  griffin_controller.h  parameters.h  parameters_ros.h
griffin_control/src/: position_controller.cpp  position_controller_node.cpp  position_controller_node.h
griffin_control/src/nodes/: griffin_controller_node.cpp  griffin_controller_node.h  position_controller_node.cpp  position_controller_node.h
rotors_control/: CMakeLists.txt  package.xml
rotors_control/catkin_ws/devel/: .catkin
rotors_control/include/rotors_control/: common.h  griffin_controller.h  parameters.h
rotors_control/src/nodes/: griffin_controller_node.cpp  griffin_controller_node.h  lee_position_controller_node.cpp  lee_position_controller_node.h
rotors_description/meshes/: sketch.dae
rotors_description/meshes/omav/: griffin_tilt_unit.stl
rotors_description/urdf/: component_snippets.xacro  griffin.xacro  griffin_actuators.xacro  griffin_base.xacro  omav_snippets.xacro  overactuated_base.xacro
rotors_gazebo/launch/: griffin.launch  omav.launch  spawn_omav.launch
rotors_gazebo/resource/: controllergains_griffin.yaml  griffin.yaml
rotors_gazebo/worlds/: horiz_objects.world  interaction.world  objects.world  objects_random.world  objects_tilt.world  shelf_objects_only.world  teleoperation.world
rotors_gazebo_plugins/src/: gazebo_controller_interface.cpp  gazebo_octomap_plugin.cpp
(+7 files in other folders)
